Milestone 2; Aggiunta colorazione tramite la proprietá color;

--- a/style.css
+++ b/style.css
@@ -33,4 +33,19 @@ main {
     width: 200px;
     border-radius: 5px;
 }
+
+/* ICONS */
+
+.orange { 
+    color: orange;
+}
+
+.blue {
+    color: blue;
+}
+
+.green {
+    color: green;
+}
+/* /ICONS */
 /* /MAIN */
